k8s/manifests/grafana/restrict_intra-traffic.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "limit-traffic-grafana"
  namespace: grafana
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana

  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: prometheus

  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
    - toEntities:
        - host
        - remote-node

---

apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "grafana-egress-world"
  namespace: grafana
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  egress:
    - toEntities:
        - world
